--- a/src/pages/Checkout/checkout.sass
+++ b/src/pages/Checkout/checkout.sass
@@ -2,19 +2,26 @@
 
 main.checkout-page
     background: $very-light-grey
-    padding: 90px 0 96px
+    padding: 106px 0 96px
 
     +all-tablets
-        padding-bottom: 116px
+        padding: 138px 0 116px
     
     +all-large-screen
-        padding-bottom: 140px
+        padding: 176px 0 140px
 
     & ~ nav.main-container.product-category-menu.col, ~ section.about-us-container.main-container
         display: none
     
     & ~ section.footer
         margin-top: 0
+
+main.checkout-page .main-container .button-text-only
+    margin-bottom: 23px
+    padding: 0
+
+    +all-large-screen
+        margin-bottom: 38px
 
 main.checkout-page.empty-cart 
     padding-bottom: 100%
