--- a/src/pages/ProductPage/product-page.sass
+++ b/src/pages/ProductPage/product-page.sass
@@ -1,14 +1,18 @@
 @import ../../sass/global
 
 main.product-page
-    padding: 90px 0 172px
+    padding: 106px 0 172px
 
     +all-tablets
-        margin-top: -50px
+        padding-top: 123px
     
     +all-large-screen
-        margin: -11px 0 240px
+        padding: 176px 0 240px
 
+
+main.product-page .main-container .button-text-only
+    margin-bottom: 28px
+    padding: 0
 
 main.product-page section.main-container.featured-product-container
     +all-screen-bigger-than-mobile
